<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".services.widgets.RecipeWidgetConfigureActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/widget_configuration_screen_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/widget_configuration_screen_prompt" />

        <RadioGroup
            android:id="@+id/widget_recipes_radio_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/widget_nutella_pie"
                style="@style/WidgetRadioButtons"
                android:text="@string/widget_nutella_pie" />

            <RadioButton
                android:id="@+id/widget_brownies"
                style="@style/WidgetRadioButtons"
                android:text="@string/widget_brownies" />

            <RadioButton
                android:id="@+id/widget_yellow_cake"
                style="@style/WidgetRadioButtons"
                android:text="@string/widget_yellow_cake" />

            <RadioButton
                android:id="@+id/widget_cheese_cake"
                style="@style/WidgetRadioButtons"
                android:text="@string/widget_cheese_cake" />

        </RadioGroup>

        <Button
            android:id="@+id/widget_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/widget_add" />

    </LinearLayout>

</layout>